@@ -5285,14 +5285,8 @@ file_status_clause:
 	check_repeated ("STATUS", SYN_CLAUSE_4, &check_duplicate);
 	current_file->file_status = $4;
 	if ($5) {
-		/* add a compiler configuration if either */
-		if (cb_std_define != CB_STD_IBM
-		 && cb_std_define != CB_STD_MVS
-		 && !cb_relaxed_syntax_checks) {
-			cb_verify (CB_UNCONFORMABLE, "VSAM STATUS");
-		} else {
-			cb_warning (cb_warn_additional, _("%s ignored"), "VSAM STATUS");
-		}
+		/* TO-DO: Add compiler configuration */
+		cb_warning (cb_warn_additional, _("%s ignored"), "VSAM STATUS");
 	}
   }
 ;
