@@ -1,4 +1,11 @@
 
+2020-07-03  Edward Hart <edwar.dan.hart@gmail.com>
+
+	* parser.y (file_status_clause): only ignore VSAM status, pending proper
+	  config option.
+	* typeck.c: implement syntax rules for FILE STATUS (bug #656), with
+	  warning for PIC 99 status (FR #333).
+
 2020-06-29  Simon Sobisch <simonsobisch@gnu.org>
 
 	* codegen.c (output_internal_function): fix bug #641 FUNCTION RETURNING
